src/main/resources/static/style/schedule.css
/* Style for Schedule for own user */
:root {
    --arrow-border: #177E87;
}

.test {
    width: 95%;
    height: 95vh;
    margin-top: -20px;
}

.content {
    height: 95vh;
}

.dayDisplay {
    width: 14.285714%;
    height: 99.2%;/*100%;*/
    float: left;

    /*display: table-row;*/

    border: 1px solid lightgray;
}
html, body {
    background-color: transparent !important;
}

.dayTop {
    /*width: 14.286971837%;*/
    /*width: 14.285714%;*/
    width: 100%;
    height: 5vh;
    line-height: 5vh;
    /*color: white;*/
    /*background-color: lightblue;
    border: 2px solid lightgray;*/
    background-color: rgba(102, 183, 190, 0.8); /*#4ea2bd;*/
    font-weight: bold;
    text-align: center;
}

.dayTop:hover {
    cursor: pointer;
    background-color: rgba(120, 204, 212, 0.8);
    color: #4a4a4a;
}

.dayTop-today {
    background-color: #756c69;
    color: white;
}

.dayTop-today:hover {
    background-color: #a09794;
}

.dayInnhold {
    /*height: 94vh; /*95%*/
    height: 89vh;
    /*background-color: blue;*/
    position: relative;
    margin-top: 1px;
}

.dayInnhold:hover {
    /*background-color: #cecece;
    cursor: pointer;*/
}

.shiftsheet {
    /*border: 2px solid darkgray;*/
    height: 100%;

    position: relative;

    /*z-index: 1336;*/
}

.tid {
    position: absolute;
    left: -3vw;
    top: -1.5vh;
    margin-bottom: 4.4vh;
    z-index: 1337; /* TODO: FIX THIS */
}

.marking-lines {
    width: 100%;
    height: 95%;
    /*margin-top: 3%;*/
    /*background-color: blue;*/

    position: absolute;
    /*height: 2px;*/
    top: 5vh;
    left: 0;
    /*background-color: red;*/
    /*background-color: orange;*/
    z-index: -1337;
}

.line {
    position: relative;
    height: 2px;
    width: 100%;

    left: 0;
    background-color: lightgray;

    margin-bottom: 7.15vh;

    /*margin-top: 7.0%;*/
}

.line:hover {
    cursor: pointer;
}


.shift {
    /* margin-top: 1px;  2px;*/
    /*width: 11.75vw;*/
    height: 44.5vh;/*  44vh;    44.6vh;*/

    width: 100%;
    position: absolute;
    top: 0;
    left: 0;

    border-radius: 5px;

    text-align: center;
}

.shift:hover {
    cursor: pointer;
}

/* For shifts that goes from one day to another*/
.shift-non-rounded-top {
    border-radius: 0 0 5px 5px;
}

.shift-non-rounded-bottom {
    border-radius: 5px 5px 0 0;
}

.shift-non-rounded-both {
    border-radius: 0;
}


.normal-shift, .shift-shift {
    background-color: #f0ad4e;
    border: 1px solid #dd9c3f;
}

.normal-shift:hover {
    background-color: #e0b374;
}
/* -matching classes is for elements with same id to change hover color */
.normal-shift-matching {
    background-color: #e0b374;
}

.absence-shift, .absence-absence {
    background-color: #f05942;
    border: 1px solid #961d1d;
}

.absence-shift:hover {
    background-color: #f0433a;
}

.available-shift, .available-available {
    background-color: #5cb85c;
    border: 1px solid #378c37;
}

.available-shift:hover {
    background-color: #72d772;
}

.locked-shift, .locked-locked {
    background-color: #898989;
    border: 1px solid #545454;
}

.locked-shift:hover {
    background-color: #a3a3a3;
}

.locked-sign-top {
    position: absolute;
    top: 5px;
    right: 5px;
}

.buttonLeft {
    position: relative;
    float: left;
}

.buttonRight {
    position: relative;
    float: right;
}

/* For mobile usage */
@media only screen and (max-width: 768px) {
    #modal-dialogYesNo {
        margin-top: 25%;
        /*Does this work???*/
    }

    /* Lines/boxes for a grid like view inside the shiftsheet */
    .line-box {

        height: 7.41vh;
        width: 100%;
        border-top: 2px solid lightgray;
        position: relative;
    }

    .line-box-bottom {
        border-bottom: 2px solid lightgray;
    }

    .time-display {
        position: absolute;
        left: 0;
        top: -5%;
    }

    .time-display-bottom {
        position: absolute;
        left: 0;
        bottom: -22%;
        padding: 0;
    }
}

/* For desktop usage */
@media only screen and (min-width: 768px) {
    .modal {
        text-align: center;

    }

    .modal:before {
        height: 100%;
        content: '';
        display: inline-block;
        vertical-align: middle;
    }

    .modal-dialog {
        display: inline-block;
        text-align: left;
        vertical-align: middle;
    }

    /* Lines/boxes for a grid like view inside the shiftsheet */
    .line-box {

        height: 7.41vh;
        width: 100%;
        border-top: 2px solid lightgray;
        position: relative;
    }

    .line-box-bottom {
        border-bottom: 2px solid lightgray;
    }

    .time-display {
        position: absolute;
        left: -3em;
        top: -5%;
    }

    .time-display-bottom {
        position: absolute;
        left: -3em;
        bottom: -22%;
        padding: 0;
    }
}

#modal-dialogYesNo {
    text-align: center;
}

.co-worker-list {
    max-height: 30vh;
    overflow-y: scroll;
}

.panel-heading:hover {
    cursor: pointer;
}

.panel-heading:hover a {
    text-decoration: underline;
}

.co-worker-panel-box:hover {
    background-color: #cbcbcb;
    cursor: pointer;
}

.panel-footer {
    border-top: 1px solid #ddd !important;
}

.panel-heading {
    border-bottom: 1px solid #B1B1B1 !important;
}

#shift-modal-shadow {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    transition: ease-in-out 0.5s;
    /* TODO: fix the black edges that appear when adding this element with background-color over the modal */
    /* TODO: make an animation so the background overlay appear smoother */
}

.shift-center-text { /* TODO: add overflow (text-overflow?) på små shift element */
    position: relative;
    top: 50%;
}

.non-display-class {
    display: none;
}

/* Datepicker styling */
.label-fixed-margin {
    margin-top: 4px;
}

.datepicker-fixed-padding {
    padding-right: 50px; /* TODO: Sjekk om dette passer for alle skjermstørrelser*/
}

.active-day {
    border-right: 1px solid var(--border-color-calendar);
    border-top: none !important;
    border-bottom: 1px solid var(--border-color-calendar);
}

.active-week-left {
    border-left: 4px solid #717581 !important;
}

.active-week-middle {
    border-bottom: 4px solid #717581 !important;
    border-top: 4px solid #717581 !important;
}

.active-week-right {
    border-right: 4px solid #717581 !important;
}

#currentDate {
    font-size: 165%;
}

#buttonPreviousWeek {
    float: left;
}

#buttonNextWeek {
    float: right;
}
#buttonNextWeek, #buttonPreviousWeek {
    font-size: 230%;
    text-shadow: -1px 0 var(--arrow-border), 0 1px var(--arrow-border), 1px 0 var(--arrow-border), 0 -1px var(--arrow-border);
    color: #1fa3ae;
}

#buttonNextWeek:hover, #buttonPreviousWeek:hover {
    cursor: pointer;
}

#buttons-top {
    margin-bottom: 30px;
}

#currentDate:hover {
    cursor: pointer;
    color: #a0a0a0;
}

body.modal-open {
    overflow: visible;
}

.color-box {
    height: 20px;
    width: 20px;
    float: right;
    border-radius: 3px;
}
.colors1 {
    float: right;
    margin-bottom: 3px !important;
}
.colors2 {
    float: right;
    margin-bottom: 3px !important;

}

.color-margin {
    margin-bottom: 3px !important;
}

.chooseWe {
    float: left;
    margin-top: 2%;
}

#choose-week-button {
    background-color: #e6e6e6;
}

#overskrift2 {
    border-bottom: 1px solid #eaeaea;
    padding-bottom: 5px;
}

